--- a/write-it/src/app/app.html
+++ b/write-it/src/app/app.html
@@ -2,7 +2,7 @@
 <p-progress-spinner class="app-loading" strokeWidth="5"  animationDuration=".5s" [style]="{ width: '50px', height: '50px'}" />
 </div>
 <write-it-header/>
-<ng-container *ngIf="!isEndpointLogin()">
+<ng-container *ngIf="!isEndpointLogin() && !isEndpointProfile()">
 <write-it-menu/>
 </ng-container>
 <router-outlet />
