--- a/write-it/src/app/modules/auth/reset-password/reset-password-component.html
+++ b/write-it/src/app/modules/auth/reset-password/reset-password-component.html
@@ -1,62 +1,72 @@
-
-    <div class="reset-password-container">
-    <div class="reset-password">
-        <p-toast />
-        <div class="title">
-            <span style="color: #02343F; font-size: 25px; width: 100%;">Set new password</span>
-        </div>
-        <form [formGroup]="resetPasswordForm">
-            <div class="input-container">
-                <div style="margin-top: 10px;">
-                    <p-iconfield>
-                        <input class="write-it-input-reset-password" [class.click-input]="clickPassword"
-                            placeholder="New password" formControlName="password" [type]="typeInputPassword" pInputText
-                            [invalid]="isInvalid('password')" (click)="handleClickinside('password')"
-                            writeItClickOutside (clickOutside)="handleClickoutside('password')" />
-                        <p-inputicon class="pi pi-eye-slash show-hide-password" [class.pi-eye]="showPassword"
-                            (click)="showHidePassword('password')" />
-                    </p-iconfield>
-
-                    @if (isInvalid('password')) {
-                    @if (resetPasswordForm.get('password')?.errors?.['required']) {
-                    <p-message severity="error" size="small" variant="simple">Password is required.</p-message>
-                    }
-                    }
-                    @if (resetPasswordForm.get('password')?.errors?.['error']) {
-                    <p-message severity="error" size="small"
-                        variant="simple">{{resetPasswordForm.get('password')?.errors?.['error']}}</p-message>
-                    }
-                </div>
-
-                <div style="margin-top: 10px;">
-
-                    <p-iconfield>
-                        <input class="write-it-input-reset-password" placeholder="Re-enter password"
-                            formControlName="reEnterPassword" [type]="typeInputReEnterPassword" pInputText
-                            [invalid]="isInvalid('reEnterPassword')" style="margin-top: 10px;"
-                            [class.click-input]="clickReEnterPassword" (click)="handleClickinside('reEnterPassword')"
-                            writeItClickOutside (clickOutside)="handleClickoutside('reEnterPassword')" (blur)="missMatchPassword()" />
-                        <p-inputicon class="pi pi-eye-slash show-hide-password" [class.pi-eye]="showReEnterPassword"
-                            (click)="showHidePassword('reEnterPassword')" />
-                    </p-iconfield>
-
-                    @if (isInvalid('reEnterPassword')) {
-                    @if (resetPasswordForm.get('reEnterPassword')?.errors?.['required']) {
-                    <p-message severity="error" size="small" variant="simple">Re-enter password is required.</p-message>
-                    }
-                    @if (resetPasswordForm.get('reEnterPassword')?.errors?.['error']) {
-                    <p-message severity="error" size="small"
-                        variant="simple">{{resetPasswordForm.get('reEnterPassword')?.errors?.['error']}}</p-message>
-                    }
-                    }
-                </div>
-            </div>
-            <div class="btn-reset-password-container">
-                <div class="btn-login">
-                    <p-button label="Reset password" (click)="ressetPassword()"
-                        [disabled]="resetPasswordForm.invalid" />
-                </div>
-            </div>
-        </form>
+<div class="reset-password-container">
+  <div class="reset-password">
+    <p-toast />
+    <div class="title">
+      <span style="color: #02343f; font-size: 25px; width: 100%"
+        >Set new password</span
+      >
     </div>
-    </div> 
+    <form [formGroup]="resetPasswordForm">
+      <div class="input-container">
+        <div style="margin-top: 10px">
+          <p-iconfield>
+            <input
+              class="write-it-input-reset-password"
+              [class.click-input]="clickPassword"
+              placeholder="New password"
+              formControlName="password"
+              [type]="typeInputPassword"
+              pInputText
+              (click)="handleClickinside('password')"
+              writeItClickOutside
+              (clickOutside)="handleClickoutside('password')"
+            />
+            <p-inputicon
+              class="pi pi-eye-slash show-hide-password"
+              [class.pi-eye]="showPassword"
+              (click)="showHidePassword('password')"
+            />
+          </p-iconfield>
+          <write-it-print-error
+            [control]="resetPasswordForm.get('password')"
+          ></write-it-print-error>
+        </div>
+
+        <div style="margin-top: 10px">
+          <p-iconfield>
+            <input
+              class="write-it-input-reset-password"
+              placeholder="Re-enter password"
+              formControlName="reEnterPassword"
+              [type]="typeInputReEnterPassword"
+              pInputText
+              style="margin-top: 10px"
+              [class.click-input]="clickReEnterPassword"
+              (click)="handleClickinside('reEnterPassword')"
+              writeItClickOutside
+              (clickOutside)="handleClickoutside('reEnterPassword')"
+              (blur)="missMatchPassword()"
+            />
+            <p-inputicon
+              class="pi pi-eye-slash show-hide-password"
+              [class.pi-eye]="showReEnterPassword"
+              (click)="showHidePassword('reEnterPassword')"
+            />
+          </p-iconfield>
+          <write-it-print-error
+            [control]="resetPasswordForm.get('reEnterPassword')"
+          ></write-it-print-error>
+        </div>
+      </div>
+      <div class="btn-reset-password-container">
+        <div class="btn-login">
+          <p-button
+            label="Reset password"
+            (click)="ressetPassword()"
+            [disabled]="resetPasswordForm.invalid"
+          />
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
