--- a/write-it/src/app/modules/user/profile/user-profile-component/user-profile-component.html
+++ b/write-it/src/app/modules/user/profile/user-profile-component/user-profile-component.html
@@ -1,41 +1,26 @@
 <div class="edit-user-profile">
+    <p-toast />
   <h1 class="title">Profiles</h1>
   <div class="formEdit">
-    <form>
+    <form [formGroup]="editProfileForm">
       <div>
         <h3 class="title">Display name</h3>
-        <input
-          class="write-it-input"
-          placeholder="Display name"
-          type="text"
-          pInputText
-          (click)="handleClickinside('displayName')"
-          writeItClickOutside
-          (clickOutside)="handleClickoutside('displayName')"
-          [class.click-input]="clickDisplayName"
-        />
+        <write-it-input formControlName="displayName" placeholder="DisplayName"></write-it-input>
+        <write-it-print-error [control]="editProfileForm.get('displayName')"></write-it-print-error>
       </div>
       <div>
         <h3 class="title">Email</h3>
-        <input
-          class="write-it-input"
-          placeholder="Email"
-          type="text"
-          pInputText
-          (click)="handleClickinside('email')"
-          writeItClickOutside
-          (clickOutside)="handleClickoutside('email')"
-          [class.click-input]="clickEmail"
-        />
+        <write-it-input formControlName="email" placeholder="Email"></write-it-input>
+        <write-it-print-error [control]="editProfileForm.get('email')"></write-it-print-error>
       </div>
     </form>
   </div>
   <div class="flex-end btn-submit-container">
     <div class="btn-reset">
-      <span> Reset </span>
+      <span (click)="reset()"> Reset </span>
     </div>
     <div class="btn-submit">
-      <p-button label="Save changes" />
+      <p-button label="Save changes" [disabled]="editProfileForm.invalid" (click)="save()"/>
     </div>
   </div>
 </div>
